--- a/home.html
+++ b/home.html
@@ -38,7 +38,7 @@
                 <ul>
                     <!-- Events for Professional Development category -->
                     <li>
-                        <h4>Event 1</h4>
+                        <h4>GCGO series event</h4>
                         <p>Date: [Event Date]</p>
                         <p>Location: [Event Location]</p>
                         <p>Description: [Event Description]</p>
